--- a/assets/mediaquery.css
+++ b/assets/mediaquery.css
@@ -1258,6 +1258,9 @@
     right: 50px;
     margin-left: 0px;
   }
+  .icon-row1{
+    margin-left: 240px;
+  }
 }
 @media (min-width: 360px) {
   #sidebar {
@@ -1269,6 +1272,9 @@
   }
     .row{
       gap: initial;
+    }
+    .icon-row1{
+      margin-left: 250px;
     }
     /* .input-group {
       width: 300px;
@@ -1361,7 +1367,7 @@
     gap: 8px;
     align-items: center;
     margin-top: 20px;
-    margin-left: 270px;
+    margin-left: 280px;
   }
  
   .nav-text133 {
@@ -1417,7 +1423,7 @@
     gap: 8px;
     align-items: center;
     margin-top: 20px;
-    margin-left: 280px;
+    margin-left: 300px;
   }
  
   .nav-text133 {
@@ -1494,7 +1500,7 @@
     gap: 8px;
     align-items: center;
     margin-top: 20px;
-    margin-left: 290px;
+    margin-left: 320px;
   }
   .sidebar{
     width: 430px;
